--- a/acerca-de.html
+++ b/acerca-de.html
@@ -133,7 +133,7 @@
                     <div id="intro">
                         <p><img src="img/about_1.jpg" alt="" class="img-responsive"></p>
                         <h2>"Mucho más que seguridad privada"</h2>
-                        <p class="lead">
+                        <p ALIGN="justify" class="lead">
 													Brindamos servicios integrales de Seguridad, mediante el asesoramiento, seguridad física, seguridad electrónica, monitoreo, apoyados en tecnología y personal altamente entrenado, evaluado y motivado, para brindar un servicio de excelencia.
                         </p>
                     </div>
@@ -145,18 +145,18 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<h3>Información empresarial</h3>
-					<p>
+					<p ALIGN="justify">
 						Somos una Empresa de Seguridad Privada, con cobertura en todo el territorio nacional, en donde la experiencia de sus principales Directivos tanto en seguridad como servicio al cliente ha sido transmitida a sus colaboradores, por medio de capacitación, evaluación y motivación, para otorgar satisfacción completa a sus clientes con un <strong>servicio de excelencia</strong> en la prevención y protección integral de bienes y personas, mediante la utilización de herramientas tecnológicas y humanas.
 					</p>
 					<h4>Misión</h4>
-					<p>
+					<p ALIGN="justify">
 						Ser pioneros en innovación en el sector de seguridad privada, consolidando valores y principios éticos en nuestro ramo de negocio, siendo referentes en el cumplimiento de la normativa legal tanto con el  Estado como con nuestros colaboradores, con el  fin de que nuestros clientes se sientan totalmente <strong>respaldados y protegidos</strong> por nuestros servicios.
 					</p>
 					<h4>Visión</h4>
-					<p>
+					<p ALIGN="justify">
 						Consolidar nuestra cobertura nacional, integrando servicios de seguridad tanto físicos, monitoreo, y tecnología de la información, abarcando un servicio integral, que nos permita ser unos de los actores principales en el corto tiempo.
 					</p>
-					<p>
+					<p ALIGN="justify">
 						ALFAPAZ CIA. LTDA. Cumpliendo con su objeto social, brinda los servicios complementarios en seguridad integral de acuerdo con los requerimientos y exigencia de nuestros clientes, poniendo a su disposición un contingente de personal operativo y administrativo <strong>debidamente capacitado, equipado, motivado y constantemente evaluado</strong>.
 					</p>
 				</div>
@@ -165,28 +165,28 @@
 						<li>
 							<i class="icon_check_alt2"></i>
 							<h4>Integridad</h4>
-							<p>
+							<p ALIGN="justify">
 								Actuamos de manera honesta, en nuestro proceder, alcanzando los objetivos por nuestro esfuerzo propio, exigiendo y respetando la integridad en todo sentido.
 							</p>
 						</li>
 						<li>
 							<i class="icon_check_alt2"></i>
 							<h4>Solidaridad</h4>
-							<p>
+							<p ALIGN="justify">
 								Trabajamos en el desarrollo de nuestra gente en lo profesional, por medio de capacitación constante, motivando ese espíritu solidario y de liderazgo en su entorno familiar.
 							</p>
 						</li>
 						<li>
 							<i class="icon_check_alt2"></i>
 							<h4>Decisión</h4>
-							<p>
+							<p ALIGN="justify">
 								Actuamos éticamente, comprometidos en crecer de manera responsable, cumpliendo eficientemente con nuestros colaboradores, clientes y Estado.
 							</p>
 						</li>
 						<li>
 							<i class="icon_check_alt2"></i>
 							<h4>Servicio</h4>
-							<p>
+							<p ALIGN="justify">
 								Estamos comprometidos en cumplir con las expectativas de nuestros clientes, brindando servicios de calidad, innovando permanentemente nuestros servicios.
 							</p>
 						</li>
@@ -201,7 +201,7 @@
       <div class="row ">
         <div class="col-md-4 col-sm-8">
           <img src="img/logo-footer.png" width="190" height="44" alt="Home Alarms" data-retina="true" id="logo_footer">
-          <p>Somos una Empresa diferente en el sector de la seguridad, brindando servicios integrales de calidad, apoyados de la tecnología y de un equipo de elite debidamente preparado, motivado y con vocación de servicio para proteger lo más preciado para ti, respetando las leyes y obligaciones patronales.</p>
+          <p ALIGN="justify">Somos una Empresa diferente en el sector de la seguridad, brindando servicios integrales de calidad, apoyados de la tecnología y de un equipo de elite debidamente preparado, motivado y con vocación de servicio para proteger lo más preciado para ti, respetando las leyes y obligaciones patronales.</p>
         </div>
         <div class="col-md-3 col-md-offset-1 col-sm-4">
           <h3>Descubre</h3>
