--- a/home.html
+++ b/home.html
@@ -172,49 +172,65 @@
 				<div class="row">
 					<div class="col-md-6">
                         <div class="box_feat">
-                            <span><img src="img/svg_icons/shield.svg" alt=""></span>
-                            <h3>Protección especializada</h3>
-                            <p>protegemos tu vida y bienes, por medio de personal altamente calificado y entrenado, con equipo y dotación de seguridad moderno.
+                            <span><img src="img\svg_icons_index\Proteccionespecializada.svg" alt=""></span>
+                            <h3>Protección especializada.</h3>
+                            <p ALIGN="justify">Protegemos tu vida y bienes, por medio de personal altamente calificado y entrenado, con equipo y dotación de seguridad moderno.
 </p>
                         </div>
 					</div>
 					<div class="col-md-6">
 						<div class="box_feat">
-                            <span><img src="img/svg_icons/mobile.svg" alt=""></span>
-                            <h3>Monitoreo remoto</h3>
-														<p>Tenemos el control de tus bienes y de nuestro servicio con un monitoreo constante y permanente los 365 días del año. </p>
+                            <span><img src="img\svg_icons_index\Monitoreoremoto.svg" alt=""></span>
+                            <h3>Monitoreo remoto.</h3>
+														<p ALIGN="justify">Tenemos el control de tus bienes y de nuestro servicio con un monitoreo constante y permanente los 365 días del año. </p>
                         </div>
 					</div>
 				</div><!-- End row -->
 				<div class="row">
 					<div class="col-md-6">
                         <div class="box_feat">
-                            <span><img src="img/svg_icons/video-camera.svg" alt=""></span>
-                            <h3>Videovigilancia</h3>
-                            <p>es el complemento para una seguridad integral, con modernos sistemas electrónicos de última tecnología. </p>
+                            <span><img src="img\svg_icons_index\Videovigilancia.svg" alt=""></span>
+                            <h3>Videovigilancia.</h3>
+                            <p ALIGN="justify">Es el complemento para una seguridad integral, con modernos sistemas electrónicos de última tecnología. </p>
                         </div>
 					</div>
 					<div class="col-md-6">
 						<div class="box_feat">
-                            <span><img src="img/svg_icons/microphone.svg" alt=""></span>
-                            <h3>•	Protección VIP</h3>
-                            <p>Servicio de guardaespaldas, traslados, investigación y custodia al mas alto nivel y discreción, con ex Oficiales de las fuerzas del orden nacional.</p>
+                            <span><img src="img\svg_icons_index\ProteccionVIP.svg" alt=""></span>
+                            <h3>Protección VIP.</h3>
+                            <p ALIGN="justify">Servicio de guardaespaldas, traslados, investigación y custodia al mas alto nivel y discreción, con ex Oficiales de las fuerzas del orden nacional.</p>
                         </div>
 					</div>
 				</div><!-- End row -->
 				<div class="row">
 					<div class="col-md-6">
                         <div class="box_feat">
-                            <span><img src="img/svg_icons/settings.svg" alt=""></span>
-                            <h3>•	Consultoría</h3>
-                            <p>Realizamos estudios de seguridad integral, identificando puntos vulnerables y sensibles en la prevención de eventos que atenten con la seguridad física y de personas.</p>
+                            <span><img src="img\svg_icons_index\Consultoria.svg" alt=""></span>
+                            <h3>Consultoría.</h3>
+                            <p ALIGN="justify">Realizamos estudios de seguridad integral, identificando puntos vulnerables y sensibles en la prevención de eventos que atenten con la seguridad física y de personas.</p>
                         </div>
 					</div>
 					<div class="col-md-6">
 						<div class="box_feat">
-                            <span><img src="img/svg_icons/clipboard.svg" alt=""></span>
-                            <h3>Profesionales certificados</h3>
-                            <p>Somos rigurosos en nuestros procesos de selección con el afán de emplear a los mejores, transmitiendo e involucrándoles con nuestros valores, con capacitación constante que permita desarrollar sus habilidades.</p>
+                            <span><img src="img\svg_icons_index\Profesionalescertificados.svg" alt=""></span>
+                            <h3>Profesionales certificados.</h3>
+                            <p ALIGN="justify">Somos rigurosos en nuestros procesos de selección con el afán de emplear a los mejores, transmitiendo e involucrándoles con nuestros valores, con capacitación constante que permita desarrollar sus habilidades.</p>
+                        </div>
+					</div>
+				</div><!-- End row -->
+				<div class="row">
+					<div class="col-md-6">
+                        <div class="box_feat">
+                            <span><img src="img\svg_icons_index\Respuestaaalertasdeemergencia.svg" alt=""></span>
+                            <h3>Respuesta a alertas de emergencia.</h3>
+                            <p ALIGN="justify">Contamos con patrullaje de emergencia ante llamadas de auxilio, o activación de botón de pánico, dando respuesta inmediata a cualquier emergencia 24/7.</p>
+                        </div>
+					</div>
+					<div class="col-md-6">
+						<div class="box_feat">
+                            <span><img src="img\svg_icons_index\SeguridadparaEventos.svg" alt=""></span>
+                            <h3>Seguridad para Eventos.</h3>
+                            <pALIGN="justify">Nos encargamos de la seguridad en tus eventos públicos o privados, identificando amenazas de riesgo en coordinación con los organismos de control, 911, Policía, bomberos, cruz roja, con patrullaje propio mientras dura el mismo.</p>
                         </div>
 					</div>
 				</div><!-- End row -->
@@ -228,7 +244,7 @@
       <div class="row ">
         <div class="col-md-4 col-sm-8">
           <img src="img/logo-footer.png" width="190" height="44" alt="Alfapaz logo" data-retina="true" id="logo_footer">
-          <p>Somos una Empresa diferente en el sector de la seguridad, brindando servicios integrales de calidad, apoyados de la tecnología y de un equipo de elite debidamente preparado, motivado y con vocación de servicio para proteger lo más preciado para ti, respetando las leyes y obligaciones patronales.</p>
+          <p ALIGN="justify">Somos una Empresa diferente en el sector de la seguridad, brindando servicios integrales de calidad, apoyados de la tecnología y de un equipo de elite debidamente preparado, motivado y con vocación de servicio para proteger lo más preciado para ti, respetando las leyes y obligaciones patronales.</p>
         </div>
         <div class="col-md-3 col-md-offset-1 col-sm-4">
           <h3>Descubre</h3>
