--- a/personal-de-seguridad.html
+++ b/personal-de-seguridad.html
@@ -140,7 +140,7 @@
                 <li><i class=></i>Experiencia mínima: 1 año</li>
                 <li><i class=></i>Credencial otorgada por el Ministerio del Interior (Curso 120 horas)</li>
                 <li><i class=></i>Curso de reentrenamiento (En caso de poseer)</li>
-                <li><i class=></i>No poseer antecedentes penales</li>
+                <li><i class=></i>No poseer antecedentes penaleS</li>
                 <li><i class=></i>Disponibilidad completa</li>
               <div style="padding-bottom: 18px;font-size : 18px;">Información Personal</div>
               <div style="display: flex; padding-bottom: 18px;width : 450px;">
