--- a/trabaja-con-nosotros.html
+++ b/trabaja-con-nosotros.html
@@ -128,7 +128,7 @@
 		<div id="sub_content_in">
 			<div class="container">
 				<h1>Trabaja con nosotros</h1>
-				<p>"Se parte de nuestro gran equipo"</p>
+				<p>Se parte de nuestro gran equipo</p>
 			</div>
 		</div>
 	</section><!-- End section -->
@@ -138,7 +138,7 @@
                 	<div class="row">
                         <div class="col-md-9">
                             <h3>Trabaja con nosotros</h3>
-                            <p class="add_bottom_30">
+                            <p ALIGN="justify" class="add_bottom_30">
                               Alfapaz, dentro de su plan empresarial tiene presente el contar con personal altamente calificado para cada área de atención en el mundo de la seguridad, nuestro personal administrativo y de operaciones tiene una capacitación constante en las competencias necesarias y adquiridas para el crecimiento profesional y personal de cada uno de nuestros empleados.
                             </p>
 
@@ -161,7 +161,7 @@
          <div class="row ">
            <div class="col-md-4 col-sm-8">
              <img src="img/logo-footer.png" width="190" height="44" alt="Alfapaz logo" data-retina="true" id="logo_footer">
-             <p>Somos una Empresa diferente en el sector de la seguridad, brindando servicios integrales de calidad, apoyados de la tecnología y de un equipo de elite debidamente preparado, motivado y con vocación de servicio para proteger lo más preciado para ti, respetando las leyes y obligaciones patronales.</p>
+             <p ALIGN="justify">Somos una Empresa diferente en el sector de la seguridad, brindando servicios integrales de calidad, apoyados de la tecnología y de un equipo de elite debidamente preparado, motivado y con vocación de servicio para proteger lo más preciado para ti, respetando las leyes y obligaciones patronales.</p>
            </div>
            <div class="col-md-3 col-md-offset-1 col-sm-4">
              <h3>Descubre</h3>
