--- a/nuestros-servicios.html
+++ b/nuestros-servicios.html
@@ -133,7 +133,7 @@
                 <div class="col-md-9">
                	   	<img src="img/service_1.jpg" alt="" class="img-responsive border">
 					<h3>Seguridad privada</h3>
-					<p>Tenemos una Visión muy amplia en donde radica principalmente la experiencia desarrollada a lo largo de los años de nuestros principales Directivos tanto en el campo público como  privado, en seguridad y servicio al cliente, eso hace que nuestro reto sea diferenciarnos sustancialmente, con el afán de otorgar <strong> tranquilidad y satisfacción </strong> completa a nuestros clientes con un servicio integral en seguridad <strong>con excelencia en la prevención y protección de bienes y personas</strong>, siempre direccionados en principios y valores éticos, tanto como para nuestros clientes, como empleados a los que consideramos pilar fundamental de nuestra Institución.</p>
+					<p ALIGN="justify">Tenemos una Visión muy amplia en donde radica principalmente la experiencia desarrollada a lo largo de los años de nuestros principales Directivos tanto en el campo público como  privado, en seguridad y servicio al cliente, eso hace que nuestro reto sea diferenciarnos sustancialmente, con el afán de otorgar <strong> tranquilidad y satisfacción </strong> completa a nuestros clientes con un servicio integral en seguridad <strong>con excelencia en la prevención y protección de bienes y personas</strong>, siempre direccionados en principios y valores éticos, tanto como para nuestros clientes, como empleados a los que consideramos pilar fundamental de nuestra Institución.</p>
           <p>Nos encargamos de proteger los activos de nuestros clientes, generando un ambiente tranquilo y transmitiendo confianza por medio de nuestros servicios tanto en seguridad física como electrónica.</p>
 
 					<div class="row">
@@ -176,7 +176,7 @@
                         </div>
                         <div class="col-md-8">
                             <h4>Seguridad Electrónica</h4>
-                            <p>
+                            <p ALIGN="justify">
                                 Como complemento en seguridad integral, ofertamos modernos sistemas electrónicos con tecnología de punta, con el afán de tener la combinación perfecta en la optimización de costos y nivel de protección.
                             </p>
                             <div class="row">
@@ -208,12 +208,12 @@
                             	<li>
                                 	<img src="img/icon_service_1.png" alt="" width="50" height="54" data-retina="true">
                                	  <h4>Atención permanente</h4>
-                                    <p>Atendemos requerimientos de seguridad las 24 horas del día, los 7 días de la semana.</p>
+                                    <p ALIGN="justify">Atendemos requerimientos de seguridad las 24 horas del día, los 7 días de la semana.</p>
                                 </li>
                                 <li>
                                 	<img src="img/icon_service_2.png" alt="" width="50" height="50" data-retina="true">
                                	  <h4>Respuesta rápida</h4>
-                                    <p>En casos de emergencia, nuestro equipo de respuesta está siempre listo para atención.</p>
+                                    <p ALIGN="justify">En casos de emergencia, nuestro equipo de respuesta está siempre listo para atención.</p>
                                 </li>
                             </ul>
                         </div>
@@ -222,12 +222,12 @@
                                 <li>
                                	  <img src="img/icon_service_3.png" alt="" width="50" height="56" data-retina="true">
                                	  <h4>Cobertura nacional.</h4>
-                                    <p>Contamos con cobertura nacional, para brindar un mejor servicio</p>
+                                    <p ALIGN="justify">Contamos con cobertura nacional, para brindar un mejor servicio</p>
                             	</li>
                                 <li>
                                 	<img src="img/icon_service_4.png" alt="" width="50" height="50" data-retina="true">
                                	  <h4>Mejores productos</h4>
-                                    <p>Trabajamos con las mejores marcas del mercado, haciendo nuestro trabajo bajo estándares internacionales.</p>
+                                    <p ALIGN="justify">Trabajamos con las mejores marcas del mercado, haciendo nuestro trabajo bajo estándares internacionales.</p>
                                 </li>
                             </ul>
                         </div>
@@ -255,7 +255,7 @@
       <div class="row ">
         <div class="col-md-4 col-sm-8">
           <img src="img/logo-footer.png" width="190" height="44" alt="Alfapaz logo" data-retina="true" id="logo_footer">
-          <p>Somos una Empresa diferente en el sector de la seguridad, brindando servicios integrales de calidad, apoyados de la tecnología y de un equipo de elite debidamente preparado, motivado y con vocación de servicio para proteger lo más preciado para ti, respetando las leyes y obligaciones patronales.</p>
+          <p ALIGN="justify">Somos una Empresa diferente en el sector de la seguridad, brindando servicios integrales de calidad, apoyados de la tecnología y de un equipo de elite debidamente preparado, motivado y con vocación de servicio para proteger lo más preciado para ti, respetando las leyes y obligaciones patronales.</p>
         </div>
         <div class="col-md-3 col-md-offset-1 col-sm-4">
           <h3>Descubre</h3>
