--- a/personal-administrativo.html
+++ b/personal-administrativo.html
@@ -128,7 +128,7 @@
 		<div id="sub_content_in">
 			<div class="container">
 				<h1>Trabaja con nosotros</h1>
-				<p>"Se parte de nuestro gran equipo"</p>
+				<p>Se parte de nuestro gran equipo</p>
 			</div>
 		</div>
 	</section><!-- End section -->
@@ -138,7 +138,7 @@
                 	<div class="row">
                         <div class="col-md-9">
                             <h3>Carrera administrativa</h3>
-                            <p class="add_bottom_30">
+                            <p ALIGN="justify" class="add_bottom_30">
                             Lo sentimos.</br>
                             Por el momento no estamos buscando personal en áreas administrativas.
                             </p>
@@ -155,12 +155,12 @@
          <div class="row ">
            <div class="col-md-4 col-sm-8">
              <img src="img/logo-footer.png" width="190" height="44" alt="Alfapaz logo" data-retina="true" id="logo_footer">
-             <p>Somos una Empresa diferente en el sector de la seguridad, brindando servicios integrales de calidad, apoyados de la tecnología y de un equipo de elite debidamente preparado, motivado y con vocación de servicio para proteger lo más preciado para ti, respetando las leyes y obligaciones patronales.</p>
+             <p ALIGN="justify">Somos una Empresa diferente en el sector de la seguridad, brindando servicios integrales de calidad, apoyados de la tecnología y de un equipo de elite debidamente preparado, motivado y con vocación de servicio para proteger lo más preciado para ti, respetando las leyes y obligaciones patronales.</p>
            </div>
            <div class="col-md-3 col-md-offset-1 col-sm-4">
              <h3>Descubre</h3>
              <ul>
-               <li><a href="acerca-de.html">Acerca de</a></li>
+               <li><a href="Quienes-somos.html">Quienes somos</a></li>
                <li><a href="agenda-una-visita.html">Agenda una visita</a></li>
                <li><a href="contacto.html">Contáctanos</a></li>
                <li><a href="servicios.html">Servicios</a></li>
