--- a/index.html
+++ b/index.html
@@ -131,24 +131,24 @@
 				<div class="ls-slide" data-ls="slidedelay: 5000; transition2d:5;">
 					<img src="img/slides/slide_1.jpg" class="ls-bg" alt="Slide background">
 					<h3 class="ls-l" style="text-shadow: 1px 1px 2px black; top: 45%; left: 60px; font-size: 60px; white-space:nowrap; color:#fff; text-transform:uppercase; font-weight:900;" data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">La mejor inversión, tu seguridad.</h3>
-					<p class="ls-l" style="text-shadow: 1px 1px 2px black; top:53%; left:60px; color:#fff; font-size:28px; white-space:nowrap;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">Brindamos un servicio confiable y accesible</p>
-					<a class="ls-l button_intro " style="top:65%; left:60px;white-space: nowrap;" data-ls="durationin:2000;delayin:1300;easingin:easeOutElastic;" href="nuestros-servicios">Nuestros servicios</a>
+					<p class="ls-l" style="text-shadow: 1px 1px 2px black; top:53%; left:60px; color:#fff; font-size:28px; white-space:nowrap;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">"Brindamos un servicio confiable y accesible"</p>
+					<a class="ls-l button_intro " style="top:65%; left:60px;white-space: nowrap;" data-ls="durationin:2000;delayin:1300;easingin:easeOutElastic;" href="#">Cotízalo ahora</a>
 				</div>
 
 				<!-- second slide -->
 				<div class="ls-slide" data-ls="slidedelay:5000; transition2d:5;">
 					<img src="img/slides/slide_3.jpg" class="ls-bg" alt="Slide background">
 					<h3 class="ls-l" style="text-shadow: 1px 1px 2px black; top:45%; left:50%; font-size: 60px; white-space:nowrap; color:#fff; text-transform:uppercase;font-weight:900;" data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">Equipo experto y calificado</h3>
-					<p class="ls-l" style="text-shadow: 1px 1px 2px black; top:53%; left:50%; color:#fff; font-size:28px; white-space:nowrap;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">Deja que nuestros profesionales se encarguen</p>
-					<a class="ls-l button_intro " style="top:65%; left:50%;white-space: nowrap;" data-ls="durationin:2000;delayin:1300;easingin:easeOutElastic;" href="nuestros-servicios">Nuestros servicios</a>
+					<p class="ls-l" style="text-shadow: 1px 1px 2px black; top:53%; left:50%; color:#fff; font-size:28px; white-space:nowrap;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">"Deja que nuestros profesionales se encarguen"</p>
+					<a class="ls-l button_intro " style="top:65%; left:50%;white-space: nowrap;" data-ls="durationin:2000;delayin:1300;easingin:easeOutElastic;" href="#">Conócenos</a>
 				</div>
 
 				<!-- third slide -->
 				<div class="ls-slide" data-ls="slidedelay: 5000; transition2d:5;">
 					<img src="img/slides/slide_2.jpg" class="ls-bg" alt="Slide background">
 					<h3 class="ls-l" style="text-shadow: 1px 1px 2px black; top:45%; left:50%; text-align:right; font-size: 60px; white-space:nowrap; color:#fff; text-transform:uppercase;font-weight:900;" data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">Monitoreo 24/7</h3>
-					<p class="ls-l" style="text-shadow: 1px 1px 2px black; top:53%; left:50%; color:#fff; font-size:28px; white-space:nowrap;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">Supervisa tu hogar o empresa en pocos clicks</p>
-					<a class="ls-l button_intro " style="top:65%; left:50%;white-space: nowrap;" data-ls="durationin:2000;delayin:1300;easingin:easeOutElastic;" href="nuestros-servicios">Nuestros servicios</a>
+					<p class="ls-l" style="text-shadow: 1px 1px 2px black; top:53%; left:50%; color:#fff; font-size:28px; white-space:nowrap;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">"Supervisa tu hogar o empresa en pocos clicks"</p>
+					<a class="ls-l button_intro " style="top:65%; left:50%;white-space: nowrap;" data-ls="durationin:2000;delayin:1300;easingin:easeOutElastic;" href="#">Cotízalo ahora</a>
 				</div>
 
 			</div>
@@ -174,19 +174,14 @@
                         <div class="box_feat">
                             <span><img src="img\svg_icons_index\Proteccionespecializada.svg" alt=""></span>
                             <h3>Protección especializada.</h3>
-<<<<<<< HEAD
-                            <p ALIGN="justify">Protegemos tu vida y bienes, por medio de personal altamente calificado y entrenado, con equipo y dotación de seguridad moderno.
-</p>
-=======
-                            <p>Protegemos tu vida y bienes con personal altamente calificado y con todos los implementos que tu seguridad necesita </p>
->>>>>>> ec503e753b1bc98e54e1a10eb73e2dfe2e426cab
+                            <p>Protegemos tu vida y bienes con personal altamente calificado y con todos los implementos que tu seguridad necesita</p>
                         </div>
 					</div>
 					<div class="col-md-6">
 						<div class="box_feat">
                             <span><img src="img\svg_icons_index\Monitoreoremoto.svg" alt=""></span>
                             <h3>Monitoreo remoto.</h3>
-														<p ALIGN="justify">Tenemos el control de tus bienes y de nuestro servicio con un monitoreo constante y permanente los 365 días del año. </p>
+														<p>Tenemos el control de tus bienes y de nuestro servicio con un monitoreo constante y permanente los 365 días del año. </p>
                         </div>
 					</div>
 				</div><!-- End row -->
@@ -195,14 +190,14 @@
                         <div class="box_feat">
                             <span><img src="img\svg_icons_index\Videovigilancia.svg" alt=""></span>
                             <h3>Videovigilancia.</h3>
-                            <p ALIGN="justify">Es el complemento para una seguridad integral, con modernos sistemas electrónicos de última tecnología. </p>
+                            <p>Es el complemento para una seguridad integral, con modernos sistemas electrónicos de última tecnología. </p>
                         </div>
 					</div>
 					<div class="col-md-6">
 						<div class="box_feat">
                             <span><img src="img\svg_icons_index\ProteccionVIP.svg" alt=""></span>
                             <h3>Protección VIP.</h3>
-                            <p ALIGN="justify">Servicio de guardaespaldas, traslados, investigación y custodia al mas alto nivel y discreción, con ex Oficiales de las fuerzas del orden nacional.</p>
+                            <p>Servicio de guardaespaldas, traslados, investigación y custodia al mas alto nivel y discreción, con ex Oficiales de las fuerzas del orden nacional.</p>
                         </div>
 					</div>
 				</div><!-- End row -->
@@ -211,18 +206,14 @@
                         <div class="box_feat">
                             <span><img src="img\svg_icons_index\Consultoria.svg" alt=""></span>
                             <h3>Consultoría.</h3>
-                            <p ALIGN="justify">Realizamos estudios de seguridad integral, identificando puntos vulnerables y sensibles en la prevención de eventos que atenten con la seguridad física y de personas.</p>
+                            <p>Realizamos estudios de seguridad integral, identificando puntos vulnerables y sensibles en la prevención de eventos que atenten con la seguridad física y de personas.</p>
                         </div>
 					</div>
 					<div class="col-md-6">
 						<div class="box_feat">
                             <span><img src="img\svg_icons_index\Profesionalescertificados.svg" alt=""></span>
                             <h3>Profesionales certificados.</h3>
-<<<<<<< HEAD
-                            <p ALIGN="justify">Somos rigurosos en nuestros procesos de selección con el afán de emplear a los mejores, transmitiendo e involucrándoles con nuestros valores, con capacitación constante que permita desarrollar sus habilidades.</p>
-=======
                             <p>Somos rigurosos en nuestros procesos de selección con el afán de emplear a los mejores profesionales. Involucramos a nuestro personal en prácticas de valores y capacitación constante que les permite desarrollar sus habilidades.</p>
->>>>>>> ec503e753b1bc98e54e1a10eb73e2dfe2e426cab
                         </div>
 					</div>
 				</div><!-- End row -->
@@ -231,18 +222,14 @@
                         <div class="box_feat">
                             <span><img src="img\svg_icons_index\Respuestaaalertasdeemergencia.svg" alt=""></span>
                             <h3>Respuesta a alertas de emergencia.</h3>
-                            <p ALIGN="justify">Contamos con patrullaje de emergencia ante llamadas de auxilio, o activación de botón de pánico, dando respuesta inmediata a cualquier emergencia 24/7.</p>
+                            <p>Contamos con patrullaje de emergencia ante llamadas de auxilio, o activación de botón de pánico, dando respuesta inmediata a cualquier emergencia 24/7.</p>
                         </div>
 					</div>
 					<div class="col-md-6">
 						<div class="box_feat">
                             <span><img src="img\svg_icons_index\SeguridadparaEventos.svg" alt=""></span>
                             <h3>Seguridad para Eventos.</h3>
-<<<<<<< HEAD
-                            <pALIGN="justify">Nos encargamos de la seguridad en tus eventos públicos o privados, identificando amenazas de riesgo en coordinación con los organismos de control, 911, Policía, bomberos, cruz roja, con patrullaje propio mientras dura el mismo.</p>
-=======
                             <p>Nos encargamos de la seguridad en tus eventos públicos o privados, identificando amenazas de riesgo en coordinación con los organismos de control: 911, Policía Nacional, Bomberos, Cruz Roja. Te acompañamos con patrullaje mientras dura el mismo.</p>
->>>>>>> ec503e753b1bc98e54e1a10eb73e2dfe2e426cab
                         </div>
 					</div>
 				</div><!-- End row -->
@@ -256,7 +243,7 @@
       <div class="row ">
         <div class="col-md-4 col-sm-8">
           <img src="img/logo-footer.png" width="190" height="44" alt="Alfapaz logo" data-retina="true" id="logo_footer">
-          <p ALIGN="justify">Somos una Empresa diferente en el sector de la seguridad, brindando servicios integrales de calidad, apoyados de la tecnología y de un equipo de elite debidamente preparado, motivado y con vocación de servicio para proteger lo más preciado para ti, respetando las leyes y obligaciones patronales.</p>
+          <p>Somos una Empresa diferente en el sector de la seguridad, brindando servicios integrales de calidad, apoyados de la tecnología y de un equipo de elite debidamente preparado, motivado y con vocación de servicio para proteger lo más preciado para ti, respetando las leyes y obligaciones patronales.</p>
         </div>
         <div class="col-md-3 col-md-offset-1 col-sm-4">
           <h3>Descubre</h3>
