--- a/nuestros-servicios.html
+++ b/nuestros-servicios.html
@@ -105,7 +105,7 @@
               <li class="submenu">
                 <a href="javascript:void(0);" class="show-submenu">Nuestra empresa <i class="icon-down-open-mini"></i></a>
                 <ul>
-                  <li><a href="acerca-de.html">Acerca de</a></li>
+                  <li><a href="Quienes-somos.html">¿Quiénes somos?</a></li>
                   <li><a href="trabaja-con-nosotros.html">Trabaja con nosotros</a></li>
                 </ul>
               </li>
