--- a/nuestros-servicios.html
+++ b/nuestros-servicios.html
@@ -67,7 +67,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-3 hidden-xs">
-            <span id="tag_line">"Nuestro compromiso, tu seguridad"</span>
+            <span id="tag_line">Nuestro compromiso, tu seguridad</span>
           </div>
           <div class="col-sm-9">
             <ul id="top_links">
@@ -254,15 +254,16 @@
             </div><!-- End row -->
         </div><!-- End container -->
 	</main><!-- End main -->
+
   <footer>
-    <div class="container">
-      <div class="row ">
-        <div class="col-md-4 col-sm-8">
-          <img src="img/logo-footer.png" width="190" height="44" alt="Alfapaz logo" data-retina="true" id="logo_footer">
-          <p ALIGN="justify">Somos una Empresa diferente en el sector de la seguridad, brindando servicios integrales de calidad, apoyados de la tecnología y de un equipo de elite debidamente preparado, motivado y con vocación de servicio para proteger lo más preciado para ti, respetando las leyes y obligaciones patronales.</p>
-        </div>
-        <div class="col-md-3 col-md-offset-1 col-sm-4">
-          <h3>Descubre</h3>
+      <div class="container">
+        <div class="row ">
+          <div class="col-md-4 col-sm-8">
+            <img src="img/logo-footer.png" width="190" height="44" alt="Alfapaz logo" data-retina="true" id="logo_footer">
+            <p ALIGN="justify">Somos una Empresa diferente en el sector de la seguridad, brindando servicios integrales de calidad, apoyados de la tecnología y de un equipo de elite debidamente preparado, motivado y con vocación de servicio para proteger lo más preciado para ti, respetando las leyes y obligaciones patronales.</p>
+          </div>
+          <div class="col-md-3 col-md-offset-1 col-sm-4">
+            <h3>Descubre</h3>
           <ul>
             <li><a href="acerca-de.html">Acerca de</a></li>
             <li><a href="agenda-una-visita.html">Agenda una visita</a></li>
