--- a/Quienes-somos.html
+++ b/Quienes-somos.html
@@ -132,7 +132,7 @@
                 <div class="col-md-8 col-md-offset-2">
                     <div id="intro">
                         <p><img src="img/about_1.jpg" alt="" class="img-responsive"></p>
-                        <h2>"Mucho más que seguridad privada"</h2>
+                        <h2>Mucho más que seguridad privada</h2>
                         <p ALIGN="justify" class="lead">
 													Brindamos servicios integrales de Seguridad, mediante el asesoramiento, seguridad física, seguridad electrónica, monitoreo, apoyados en tecnología y personal altamente entrenado, evaluado y motivado, para brindar un servicio de excelencia.
                         </p>
@@ -161,6 +161,7 @@
 					</p>
 				</div>
 				<div class="col-sm-7 col-sm-offset-1">
+					<h3>Nuestros valores</h3>
 					<ul class="feat" id="about">
 						<li>
 							<i class="icon_check_alt2"></i>
@@ -206,7 +207,7 @@
 	        <div class="col-md-3 col-md-offset-1 col-sm-4">
 	          <h3>Descubre</h3>
           <ul>
-            <li><a href="acerca-de.html">Acerca de</a></li>
+            <li><a href="acerca-de.html">Quienes somos</a></li>
             <li><a href="agenda-una-visita.html">Agenda una visita</a></li>
             <li><a href="contacto.html">Contáctanos</a></li>
             <li><a href="servicios.html">Servicios</a></li>
