--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-3 hidden-xs">
-						<span id="tag_line">"Nuestro compromiso, tu seguridad"</span>
+						<span id="tag_line">Nuestro compromiso, tu seguridad</span>
 					</div>
 					<div class="col-sm-9">
 						<ul id="top_links">
