--- a/nuestros-servicios.html
+++ b/nuestros-servicios.html
@@ -133,12 +133,10 @@
                 <div class="col-md-9">
                	   	<img src="img/service_1.jpg" alt="" class="img-responsive border">
 					<h3>Seguridad privada</h3>
-<<<<<<< HEAD
 					<p ALIGN="justify">Tenemos una Visión muy amplia en donde radica principalmente la experiencia desarrollada a lo largo de los años de nuestros principales Directivos tanto en el campo público como  privado, en seguridad y servicio al cliente, eso hace que nuestro reto sea diferenciarnos sustancialmente, con el afán de otorgar <strong> tranquilidad y satisfacción </strong> completa a nuestros clientes con un servicio integral en seguridad <strong>con excelencia en la prevención y protección de bienes y personas</strong>, siempre direccionados en principios y valores éticos, tanto como para nuestros clientes, como empleados a los que consideramos pilar fundamental de nuestra Institución.</p>
           <p>Nos encargamos de proteger los activos de nuestros clientes, generando un ambiente tranquilo y transmitiendo confianza por medio de nuestros servicios tanto en seguridad física como electrónica.</p>
-=======
 					<p>Tenemos una visión amplia en donde radica la experiencia en seguridad y servicio al cliente, desarrollada por nuestros principales Directivos, tanto en el sector público como en el privado. Nuestra prioridad es diferenciarnos para otorgar <strong>tranquilidad y satisfacción en la protección de bienes y personas.</strong></p>
->>>>>>> ec503e753b1bc98e54e1a10eb73e2dfe2e426cab
+
 
 					<div class="row">
             <div class="row strip">
@@ -155,7 +153,7 @@
                                         <li>Guardianía y vigilancia uniformada y armada.</li>
                                         <li>Protección VIP (Guardaespaldas).</li>
                                         <li>Custodia de personas o productos con o sin vehículo en todo el territorio nacional.</li>
-                                        <li>Repuesta a emergencias de alarma.</li>
+                                        <li>Respuesta a emergencias de alarma.</li>
                                         <li>Servicio de patrullaje.</li>
                                         <li>Seguridad para eventos.</li>
                                     </ul>
