--- a/Quienes-somos.html
+++ b/Quienes-somos.html
@@ -225,8 +225,8 @@
       </div><!-- End row -->
       <div id="social_footer">
         <ul>
-          <li><a href="#0"><i class="icon-facebook"></i></a></li>
-          <li><a href="#0"><i class="icon-twitter"></i></a></li>
+					<li><a href="https://www.facebook.com/AlfapazEc"><i class="icon-facebook"></i></a></li>
+          <li><a href="https://twitter.com/AlfapazEc"><i class="icon-twitter"></i></a></li>
         </ul>
       </div>
     </div><!-- End container -->
