--- a/Quienes-somos.html
+++ b/Quienes-somos.html
@@ -202,7 +202,7 @@
 	      <div class="row ">
 	        <div class="col-md-4 col-sm-8">
 	          <img src="img/logo-footer.png" width="190" height="44" alt="Alfapaz logo" data-retina="true" id="logo_footer">
-	          <p ALIGN="justify">Somos una Empresa diferente en el sector de la seguridad, brindando servicios integrales de calidad, apoyados de la tecnología y de un equipo de elite debidamente preparado, motivado y con vocación de servicio para proteger lo más preciado para ti, respetando las leyes y obligaciones patronales.</p>
+						<p ALIGN="justify">Somos una Empresa diferente en el sector de la seguridad, brindamos servicios integrales de calidad apoyados de tecnología y de un equipo de élite debidamente preparado, motivado y con vocación de servicio. Permítenos proteger lo más preciado para ti.</p>
 	        </div>
 	        <div class="col-md-3 col-md-offset-1 col-sm-4">
 	          <h3>Descubre</h3>
