--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 					<img src="img/slides/slide_1.jpg" class="ls-bg" alt="Slide background">
 					<h3 class="ls-l" style="text-shadow: 1px 1px 2px black; top: 45%; left: 60px; font-size: 60px; white-space:nowrap; color:#fff; text-transform:uppercase; font-weight:900;" data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">La mejor inversión, tu seguridad.</h3>
 					<p class="ls-l" style="text-shadow: 1px 1px 2px black; top:53%; left:60px; color:#fff; font-size:28px; white-space:nowrap;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">Brindamos un servicio confiable y accesible</p>
-					<a class="ls-l button_intro " style="top:65%; left:60px;white-space: nowrap;" data-ls="durationin:2000;delayin:1300;easingin:easeOutElastic;" href="nuestros-servicios">Nuestros servicios</a>
+					<a class="ls-l button_intro " style="top:65%; left:60px;white-space: nowrap;" data-ls="durationin:2000;delayin:1300;easingin:easeOutElastic;" href="nuestros-servicios.html">Nuestros servicios</a>
 				</div>
 
 				<!-- second slide -->
@@ -140,7 +140,7 @@
 					<img src="img/slides/slide_3.jpg" class="ls-bg" alt="Slide background">
 					<h3 class="ls-l" style="text-shadow: 1px 1px 2px black; top:45%; left:50%; font-size: 60px; white-space:nowrap; color:#fff; text-transform:uppercase;font-weight:900;" data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">Equipo experto y calificado</h3>
 					<p class="ls-l" style="text-shadow: 1px 1px 2px black; top:53%; left:50%; color:#fff; font-size:28px; white-space:nowrap;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">Deja que nuestros profesionales se encarguen</p>
-					<a class="ls-l button_intro " style="top:65%; left:50%;white-space: nowrap;" data-ls="durationin:2000;delayin:1300;easingin:easeOutElastic;" href="nuestros-servicios">Conócenos</a>
+					<a class="ls-l button_intro " style="top:65%; left:50%;white-space: nowrap;" data-ls="durationin:2000;delayin:1300;easingin:easeOutElastic;" href="nuestros-servicios.html">Conócenos</a>
 				</div>
 
 				<!-- third slide -->
@@ -148,7 +148,7 @@
 					<img src="img/slides/slide_2.jpg" class="ls-bg" alt="Slide background">
 					<h3 class="ls-l" style="text-shadow: 1px 1px 2px black; top:45%; left:50%; text-align:right; font-size: 60px; white-space:nowrap; color:#fff; text-transform:uppercase;font-weight:900;" data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">Monitoreo 24/7</h3>
 					<p class="ls-l" style="text-shadow: 1px 1px 2px black; top:53%; left:50%; color:#fff; font-size:28px; white-space:nowrap;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">Supervisa tu hogar o empresa en pocos clicks</p>
-					<a class="ls-l button_intro " style="top:65%; left:50%;white-space: nowrap;" data-ls="durationin:2000;delayin:1300;easingin:easeOutElastic;" href="nuestros-servicios">Nuestros servicios</a>
+					<a class="ls-l button_intro " style="top:65%; left:50%;white-space: nowrap;" data-ls="durationin:2000;delayin:1300;easingin:easeOutElastic;" href="nuestros-servicios.html">Nuestros servicios</a>
 				</div>
 
 			</div>
