--- a/acerca-de.html
+++ b/acerca-de.html
@@ -206,7 +206,7 @@
 	        <div class="col-md-3 col-md-offset-1 col-sm-4">
 	          <h3>Descubre</h3>
           <ul>
-            <li><a href="acerca-de.html">Acerca de</a></li>
+            <li><a href="acerca-de.html">'¿Quiénes somos?</a></li>
             <li><a href="agenda-una-visita.html">Agenda una visita</a></li>
             <li><a href="contacto.html">Contáctanos</a></li>
             <li><a href="servicios.html">Servicios</a></li>
