--- a/agenda-una-visita.html
+++ b/agenda-una-visita.html
@@ -119,7 +119,7 @@
 	<section class="parallax_window_in short" data-parallax="scroll" data-image-src="img/subheader_in_3.jpg" data-natural-width="1400" data-natural-height="350">
 		<div id="sub_content_in">
 			<div class="container">
-				<h1>Te visitamos?</h1>
+				<h1>¿Te visitamos?</h1>
 				<p>Nuestro equipo especializado visitará tu casa u oficina para identificar tus necesidades.</p>
 			</div>
 		</div>
@@ -171,7 +171,7 @@
                 <div class="form_title">
                         <h3><strong><i class="icon-location-5"></i></strong>Dirección</h3>
                         <p>
-                            En donde podemos encontrarte?.
+                            ¿En donde podemos encontrarte?.
                         </p>
                     </div>
                	<div class="step">
@@ -208,7 +208,7 @@
             <div class="form_title">
                         <h3><strong><i class="icon-calendar-empty"></i></strong>Agenda una visita</h3>
                         <p>
-                            Cuándo podemos visitarte?.
+                            ¿Cuándo podemos visitarte?.
                         </p>
                     </div>
                     <div class="step">
@@ -233,7 +233,7 @@
 			</div><!--End step -->
 
             <div class="form_title">
-                <h3><strong><i class="icon-pencil-7"></i></strong>Cuéntanos, qué necesitas?</h3>
+                <h3><strong><i class="icon-pencil-7"></i></strong>Cuéntanos, ¿Qué necesitas?</h3>
             </div>
 				<div class="step add_bottom_30">
 					<div class="form-group add_bottom_45">
@@ -249,7 +249,7 @@
 
                 <div class="col-md-3">
                 	<div class="box_style_2">
-                    	<h4>Necesitas ayuda?</h4>
+                    	<h4>¿Necesitas ayuda?</h4>
                         <h5><i class="icon_globe"></i> Llámanos</h5>
                             <ul>
                                 <li><strong>Ventas</strong><br><a href="tel://+59332588785"> 32588785 </a> - <a href="tel://+593994811800"> 0994811800 </a><br><small>Lunes a viernes 8am - 5pm</small></li>
@@ -259,7 +259,7 @@
                              <h5><i class="icon_mail_alt"></i> Escríbenos</h5>
                             <ul>
                                 <li><strong>Información general</strong><br><a href="mailto:info@alfapaz.com">info@alfapaz.com</a></li>
-                                <li><strong>Solicita una visita</strong><p class="nopadding">Quieres que un equipo especializado te visite?.<br><a href="mailto:visitas@alfapaz.com">visitas@alfapaz.com</a></p></li>
+                                <li><strong>Solicita una visita</strong><p class="nopadding">¿Quieres que un equipo especializado te visite?.<br><a href="mailto:visitas@alfapaz.com">visitas@alfapaz.com</a></p></li>
                             </ul>
                     </div>
                 </div><!-- End col-md-3 -->
@@ -278,7 +278,7 @@
           <div class="col-md-3 col-md-offset-1 col-sm-4">
             <h3>Descubre</h3>
           <ul>
-            <li><a href="acerca-de.html">'¿Quiénes somos?</a></li>
+            <li><a href="acerca-de.html">¿Quiénes somos?</a></li>
             <li><a href="agenda-una-visita.html">Agenda una visita</a></li>
             <li><a href="contacto.html">Contáctanos</a></li>
             <li><a href="servicios.html">Servicios</a></li>
