--- a/nuestros-servicios.html
+++ b/nuestros-servicios.html
@@ -241,7 +241,7 @@
 
                 <div class="col-md-3">
                     <div class="box_style_1">
-                        <h5>Encontraste lo que buscabas?</h5>
+                        <h5>¿Encontraste lo que buscabas?</h5>
                         <p class="nopadding">
                             Nuestro personal está listo para atender cualquier duda.<br>
                             <a href="contacto.html" class="link_normal">Contáctanos</a>
@@ -263,7 +263,7 @@
           <div class="col-md-3 col-md-offset-1 col-sm-4">
             <h3>Descubre</h3>
           <ul>
-            <li><a href="acerca-de.html">'¿Quiénes somos?</a></li>
+            <li><a href="acerca-de.html">¿Quiénes somos?</a></li>
             <li><a href="agenda-una-visita.html">Agenda una visita</a></li>
             <li><a href="contacto.html">Contáctanos</a></li>
             <li><a href="servicios.html">Servicios</a></li>
