--- a/contacto.html
+++ b/contacto.html
@@ -189,7 +189,7 @@
                             	 <li><strong>Atención al cliente</strong><br><a href="tel://+59332586728"> 032586728</a><a href="tel://+59332586728"> 032588785</a><a href="tel://+59332586728"> 0994811800</a></li>
                                 <li><strong>Información</strong><br><a href="tel://+59332586728"> +59332586728</a><br><small>Lunes a viernes 8am - 5pm</small></li>
                                 <li><strong>Información General</strong><br><a href="mailto:info@domain.com">info@alfapaz.com</a></li>
-                                <li><strong>Deseas una visita?</strong><p class="nopadding"> Quieres que un equipo especializado te visite?.<br><a href="mailto:visitas@alfapaz.com">visitas@alfapaz.com</a></p></li>
+                                <li><strong>Deseas una visita?</strong><p class="nopadding"> ¿Quieres que un equipo especializado te visite?.<br><a href="mailto:visitas@alfapaz.com">visitas@alfapaz.com</a></p></li>
                             </ul>
                     </div>
                 </div><!-- End col-md-3 -->
@@ -207,7 +207,7 @@
           <div class="col-md-3 col-md-offset-1 col-sm-4">
             <h3>Descubre</h3>
           <ul>
-            <li><a href="acerca-de.html">'¿Quiénes somos?</a></li>
+            <li><a href="acerca-de.html">¿Quiénes somos?</a></li>
             <li><a href="agenda-una-visita.html">Agenda una visita</a></li>
             <li><a href="contacto.html">Contáctanos</a></li>
             <li><a href="servicios.html">Servicios</a></li>
