--- a/personal-de-seguridad.html
+++ b/personal-de-seguridad.html
@@ -162,21 +162,21 @@
                 Hoja de vida, cédula y certificado de votación, Carné del Ministerio de Gobierno, Certificado del Curso de Re-entrenamiento, Licencia de conducir, Acta de grado, Certificados laborales, Diplomas de cursos realizados, Certificado de antecedentes penales, Certificado médico que acredite excelente salud, dísica y mental (otorgado por la Red de Salud Pública del Ecuador)<br/>
                   <input id="data_10" name="data_10" style="width : 450px;" type="file" class="form-control"/>
                 </div>
-                <div style="padding-bottom: 18px;">Cuándo puedes comenzar?<span style="color: red;"> *</span><br/>
+                <div style="padding-bottom: 18px;">¿Cuándo puedes comenzar?<span style="color: red;"> *</span><br/>
                   <input type="text" id="data_13" name="data_13" style="width : 450px;" class="form-control"/>
                 </div>
-                <div style="padding-bottom: 18px;">A qué ciudad aplicarías?<span style="color: red;"> *</span><br/>
+                <div style="padding-bottom: 18px;">¿A qué ciudad aplicarías?<span style="color: red;"> *</span><br/>
                   <input type="text" id="data_13" name="data_20" style="width : 450px;" class="form-control"/>
                 </div>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/pikaday.min.js" type="text/javascript"></script>
                   <link href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/css/pikaday.min.css" rel="stylesheet" type="text/css" />
                 <script type="text/javascript">new Pikaday({ field: document.getElementById('data_13') });</script>
-              <div style="padding-bottom: 18px;">Estás dispuesto/a a residir fuera de tu ciudad?<span style="color: red;"> *</span><br/>
+              <div style="padding-bottom: 18px;">¿Estás dispuesto/a a residir fuera de tu ciudad?<span style="color: red;"> *</span><br/>
                 <span><input type="radio" id="data_14_0" name="data_14" value="Yes"/> Si</span><br/>
                 <span><input type="radio" id="data_14_1" name="data_14" value="No"/> No</span><br/>
                 <span><input type="radio" id="data_14_2" name="data_14" value="Not sure"/> No estoy seguro/a</span><br/>
               </div>
-              <div style="padding-bottom: 18px;"> Cuál es la última empresa para la que trabajaste?<span style="color: red;"> *</span><br/>
+              <div style="padding-bottom: 18px;"> ¿Cuál es la última empresa para la que trabajaste?<span style="color: red;"> *</span><br/>
                 <input type="text" id="data_15" name="data_15" style="width : 450px;" class="form-control"/>
               </div>
               <div style="padding-bottom: 18px;"><input name="skip_Submit" value="Enviar" class="btn_1 green medium add_bottom_30" type="submit"/></div>
@@ -243,7 +243,7 @@
           <div class="col-md-3 col-md-offset-1 col-sm-4">
             <h3>Descubre</h3>
           <ul>
-            <li><a href="acerca-de.html">'¿Quiénes somos?</a></li>
+            <li><a href="acerca-de.html">¿Quiénes somos?</a></li>
             <li><a href="agenda-una-visita.html">Agenda una visita</a></li>
             <li><a href="contacto.html">Contáctanos</a></li>
             <li><a href="servicios.html">Servicios</a></li>
