--- a/nuestros-servicios.html
+++ b/nuestros-servicios.html
@@ -247,6 +247,9 @@
                             <a href="contacto.html" class="link_normal">Contáctanos</a>
                         </p>
                     </div><!-- End Box_style_1 -->
+                    <ul id="cat_nav">
+                      <li><li><a href="/Perfil-empresarial-Alfapaz.pdf" download="Perfil-empresarial-Alfapaz">Descarga nuestro brochure</a></li>
+                      </ul>
                 </div><!-- End col-md-3 -->
 
             </div><!-- End row -->
