--- a/Quienes-somos.html
+++ b/Quienes-somos.html
@@ -146,7 +146,7 @@
 				<div class="col-sm-4">
 					<h3>Información empresarial</h3>
 					<p ALIGN="justify">
-						información empresarial: ALFAPAZ CIA. LTDA. Cumpliendo con su objeto social, brinda los servicios complementarios en seguridad integral de acuerdo con los requerimientos y exigencia de nuestros clientes, poniendo a su disposición un contingente de personal operativo y administrativo debidamente capacitado, equipado, motivado y constantemente evaluado.
+						ALFAPAZ CIA. LTDA. Cumpliendo con su objeto social, brinda los servicios complementarios en seguridad integral de acuerdo con los requerimientos y exigencia de nuestros clientes, poniendo a su disposición un contingente de personal operativo y administrativo debidamente capacitado, equipado, motivado y constantemente evaluado.
 					</p>
 					<h4>Misión</h4>
 					<p ALIGN="justify">
@@ -155,9 +155,6 @@
 					<h4>Visión</h4>
 					<p ALIGN="justify">
 						Consolidar nuestra cobertura nacional, integrando servicios de seguridad tanto físicos, monitoreo, y tecnología de la información, abarcando un servicio integral, que nos permita ser unos de los actores principales en el corto tiempo.
-					</p>
-					<p ALIGN="justify">
-						ALFAPAZ CIA. LTDA. Cumpliendo con su objeto social, brinda los servicios complementarios en seguridad integral de acuerdo con los requerimientos y exigencia de nuestros clientes, poniendo a su disposición un contingente de personal operativo y administrativo <strong>debidamente capacitado, equipado, motivado y constantemente evaluado</strong>.
 					</p>
 				</div>
 				<div class="col-sm-7 col-sm-offset-1">
