--- a/contacto.html
+++ b/contacto.html
@@ -116,7 +116,7 @@
     </div><!-- container -->
   </header><!-- End Header -->
 
-	<section class="parallax_window_in short" data-parallax="scroll" data-image-src="img/subheader_in_3.jpg" data-natural-width="1400" data-natural-height="350">
+	<section class="parallax_window_in short" data-parallax="scroll" data-image-src="img/subheader_in_3.jpg" >
 		<div id="sub_content_in">
 			<div class="container">
 				<h1>Contáctanos</h1>
