--- a/personal-de-seguridad.html
+++ b/personal-de-seguridad.html
@@ -179,7 +179,9 @@
               <div style="padding-bottom: 18px;"> ¿Cuál es la última empresa para la que trabajaste?<span style="color: red;"> *</span><br/>
                 <input type="text" id="data_15" name="data_15" style="width : 450px;" class="form-control"/>
               </div>
-              <div style="padding-bottom: 18px;"><input name="skip_Submit" value="Enviar" class="btn_1 green medium add_bottom_30" type="submit"/></div>
+              <div class="col-md-6">
+                            <input type="submit" value="Enviar" class="btn_1 green medium add_bottom_30" id="submit-contact"/>
+              </div>
               </form>
 
               <script type="text/javascript">
