--- a/personal-de-seguridad.html
+++ b/personal-de-seguridad.html
@@ -257,7 +257,7 @@
           <ul id="contact_details_footer">
             <li id="address_footer">Remigio Crespo y Psje. Romeo Castillo <br>Ambato - Ecuador</li>
             <li id="phone_footer"><a href="tel://+59332588785"> 032588785</a> / <a href="tel://+593994811800"> 0994811800</a></li>
-            <li id="email_footer"><a href="#0">info@alfapaz.com</a></li>
+            <li id="email_footer"><a href="mailto:visitas@alfapaz.com">info@alfapaz.com</a></li>
           </ul>
         </div>
       </div><!-- End row -->
