--- a/personal-de-seguridad.html
+++ b/personal-de-seguridad.html
@@ -129,7 +129,7 @@
         <div class="container margin_60_35">
         	<div class="row">
             <div class="col-md-9">
-              <form method="post" action="//submit.form" onSubmit="return validateForm();">
+              <form method="post" action="assets/personal-seg.php" id="contactform">
               <div style="width: 400px;">
               </div>
               <div style="padding-bottom: 18px;font-size : 24px;">Buscamos nuevos talentos.</div>
