Sin form control

--- a/contacto1.html
+++ b/contacto1.html
@@ -176,19 +176,19 @@
                     <div style="padding-bottom: 9px;font-size : 18px;">Información Profesional</div>
                     <div style="padding-bottom: 18px;"><strong>Adjunta la siguiente informaciónen un archivo comprimido (ZIP,RAR,7ZIP):<span style="color: red;"> *</span></strong><br/>
                     Hoja de vida, cédula y certificado de votación, Carné del Ministerio de Gobierno, Certificado del Curso de Re-entrenamiento, Licencia de conducir, Acta de grado, Certificados laborales, Diplomas de cursos realizados, Certificado de antecedentes penales, Certificado médico que acredite excelente salud, dísica y mental (otorgado por la Red de Salud Pública del Ecuador)<br/>
-                      <input id="cv" name="cv" style="width : 450px;" type="file" class="form-control"/>
+                      <input id="cv" name="cv" style="width : 450px;" type="file"/>
                     </div>
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="form-group">
                                 <label>¿Cuándo puedes comenzar?</label>
-                                <input type="text" id="disponibilidad" name="disponibilidad" class="form-control">
+                                <input type="text" id="disponibilidad" name="disponibilidad">
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
                             <div class="form-group">
                                 <label> ¿A qué ciudad aplicarías?</label>
-                                <input type="text" id="ciudad" name="ciudad" class="form-control">
+                                <input type="text" id="ciudad" name="ciudad">
                             </div>
                         </div>
                     </div>
@@ -196,13 +196,13 @@
                         <div class="col-md-6 col-sm-6">
                             <div class="form-group">
                                 <label>¿Estarías dispuesto a residir fuera de tu ciudad?</label>
-                                <input type="decision" id="decision" name="phone_contact" class="form-control">
+                                <input type="decision" id="decision" name="phone_contact">
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
                             <div class="form-group">
                                 <label>¿Cuál fue la ultima empresa para la que trabajaste?</label>
-                                <input type="text" id="empresa" name="empresa" class="form-control">
+                                <input type="text" id="empresa" name="empresa">
                             </div>
                         </div>
                     </div>
