--- a/personal-seguridad/contacto4.html
+++ b/personal-seguridad/contacto4.html
@@ -156,11 +156,11 @@
                                             <input type="email" class="form-control" id="email" name="email" required maxlength="50">
                                         </div>
                                         <div class="form-group">
-                                            <label for="name"> :</label>
+                                            <label for="name"> Numero telefónico:</label>
                                             <textarea class="form-control" type="textarea" name="message" id="message"  maxlength="100"></textarea>
                                         </div>
                                         <div class="form-group">
-                                            <label for="name"> Número telefónico:</label>
+                                            <label for="name"> Hoja de vida:</label>
                                             <input type="file" class="form-control" id="image" name="image" required>
                                         </div>
                                         <button type="submit" class="btn_1 green medium add_bottom_30" id="btnContactUs">Enviar &rarr;</button>
