--- a/Quienes-somos.html
+++ b/Quienes-somos.html
@@ -191,7 +191,24 @@
 					</ul>
 				</div>
 			</div><!-- End row -->
+			<div class='slider'>
+					<h3>Nuestros Clientes</h3>
+			      <div class='container1'>
+			        <div><img src="img/apple-touch-icon-152x152.png" /></div>
+							 <div><img src="img/apple-touch-icon-152x152.png" /></div>
+							  <div><img src="img/apple-touch-icon-152x152.png" /></div>
+								 <div><img src="img/apple-touch-icon-152x152.png" /></div>
+								  <div><img src="img/apple-touch-icon-152x152.png" /></div>
+									 <div><img src="img/apple-touch-icon-152x152.png" /></div>
+									  <div><img src="img/apple-touch-icon-152x152.png" /></div>
+										 <div><img src="img/apple-touch-icon-152x152.png" /></div>
+										  <div><img src="img/apple-touch-icon-152x152.png" /></div>
+											 <div><img src="img/apple-touch-icon-152x152.png" /></div>
+											  <div><img src="img/apple-touch-icon-152x152.png" /></div>
+			      </div>
+			    </div>
 		</div><!-- End container -->
+
 	</main><!-- End main -->
 
 	<footer>
