--- a/Quienes-somos.html
+++ b/Quienes-somos.html
@@ -194,17 +194,11 @@
 			<div class='slider'>
 					<h3>Nuestros Clientes</h3>
 			      <div class='container1'>
-			        <div><img src="img/apple-touch-icon-152x152.png" /></div>
-							 <div><img src="img/apple-touch-icon-152x152.png" /></div>
-							  <div><img src="img/apple-touch-icon-152x152.png" /></div>
-								 <div><img src="img/apple-touch-icon-152x152.png" /></div>
-								  <div><img src="img/apple-touch-icon-152x152.png" /></div>
-									 <div><img src="img/apple-touch-icon-152x152.png" /></div>
-									  <div><img src="img/apple-touch-icon-152x152.png" /></div>
-										 <div><img src="img/apple-touch-icon-152x152.png" /></div>
-										  <div><img src="img/apple-touch-icon-152x152.png" /></div>
-											 <div><img src="img/apple-touch-icon-152x152.png" /></div>
-											  <div><img src="img/apple-touch-icon-152x152.png" /></div>
+			        <div>
+							<div><img src="img/Clientes-4.jpg" /></div>
+							<div><img src="img/Clientes-3.jpg" /></div>
+							<div><img src="img/Clientes-2.jpg" /></div>
+							<div><img src="img/Clientes-1.jpg" /></div>
 			      </div>
 			    </div>
 		</div><!-- End container -->
