cambio de numeros de contacto

--- a/agenda-una-visita.html
+++ b/agenda-una-visita.html
@@ -252,9 +252,9 @@
                     	<h4>¿Necesitas ayuda?</h4>
                         <h5><i class="icon_globe"></i> Llámanos</h5>
                             <ul>
-                                <li><strong>Ventas</strong><br><a href="tel://+59332588785"> 32588785 </a> - <a href="tel://+593994811800"> 0994811800 </a><br><small>Lunes a viernes 8am - 5pm</small></li>
-                                <li><strong>Asistencia 24h</strong><br><a href="tel://+593995183637 "> 0995183637 </a></li>
-                                <li><strong>Información General</strong><br><a href="tel://+593992553953"> 0992553953</a><br><small>Lunes a viernes 8am - 5pm</small></li>
+                                <li><strong>Ventas</strong><br><a href="tel://+59332586728"> 032586728</a> / <a href="tel://+59332586728"> 032588785</a><br><small>Lunes a viernes 8am - 5pm</small></li>
+                                <li><strong>Asistencia 24h</strong><br><a href="tel://+59332586728"> 032586728</a> / <a href="tel://+59332586728"> 032588785</a></li>
+                                <li><strong>Información General</strong><br><a href="tel://+59332586728"> 032586728</a> / <a href="tel://+59332586728"> 032588785</a><br><small>Lunes a viernes 8am - 5pm</small></li>
                             </ul>
                              <h5><i class="icon_mail_alt"></i> Escríbenos</h5>
                             <ul>
@@ -289,7 +289,7 @@
           <h3>Contactos</h3>
           <ul id="contact_details_footer">
             <li id="address_footer">Remigio Crespo y Psje. Romeo Castillo <br>Ambato - Ecuador</li>
-            <li id="phone_footer"><a href="tel://+59332588785"> 032588785</a> / <a href="tel://+593994811800"> 0994811800</a></li>
+            <li id="phone_footer"><a href="tel://+59332586728"> 032586728</a> / <a href="tel://+59332586728"> 032588785</a></li>
             <li id="email_footer"><a href="#0">info@alfapaz.com</a></li>
           </ul>
         </div>
