--- a/contacto.html
+++ b/contacto.html
@@ -186,7 +186,7 @@
                             </ul>
                              <h5>Contáctanos</h5>
                             <ul>
-                            	 <li><strong>Atención al cliente</strong><br><a href="tel://+59332586728"> 032586728</a><a href="tel://+59332586728"> 032588785</a><a href="tel://+59332586728"> 0994811800</a></li>
+                            	 <li><strong>Atención al cliente</strong><br><a href="tel://+59332586728"> 032586728</a> / <a href="tel://+59332586728"> 032588785</a></li>
                                 <li><strong>Información</strong><br><a href="tel://+59332586728"> +59332586728</a><br><small>Lunes a viernes 8am - 5pm</small></li>
                                 <li><strong>Información General</strong><br><a href="mailto:info@domain.com">info@alfapaz.com</a></li>
                                 <li><strong>Deseas una visita?</strong><p class="nopadding"> ¿Quieres que un equipo especializado te visite?.<br><a href="mailto:visitas@alfapaz.com">visitas@alfapaz.com</a></p></li>
@@ -218,7 +218,7 @@
           <h3>Contactos</h3>
           <ul id="contact_details_footer">
             <li id="address_footer">Remigio Crespo y Psje. Romeo Castillo <br>Ambato - Ecuador</li>
-            <li id="phone_footer"><a href="tel://+59332588785"> 032588785</a> / <a href="tel://+593994811800"> 0994811800</a></li>
+            <li id="phone_footer"><a href="tel://+59332586728"> 032586728</a> / <a href="tel://+59332586728"> 032588785</a></li>
             <li id="email_footer"><a href="#0">info@alfapaz.com</a></li>
           </ul>
         </div>
