--- a/Quienes-somos.html
+++ b/Quienes-somos.html
@@ -209,14 +209,35 @@
 
 			<div class="gallery">
 			  <a target="_blank" >
-			    <img src="img/Clientes-3.jpg" alt="Northern Lights" width="600" height="400">
+			    <img src="img/Clientes-3.jpg" alt="Nuestros clientes" width="600" height="400">
 			  </a>
 			  <div class="desc"></div>
 			</div>
 
 			<div class="gallery">
 			  <a target="_blank" >
-			    <img src="img/Clientes-4.jpg" alt="Mountains" width="600" height="400">
+			    <img src="img/Clientes-4.jpg" alt="Nuestros clientes" width="600" height="400">
+			  </a>
+			  <div class="desc"></div>
+			</div>
+
+			<div class="gallery">
+			  <a target="_blank" >
+			    <img src="img/Clientes-5.png" alt="Nuestros clientes" width="600" height="400">
+			  </a>
+			  <div class="desc"></div>
+			</div>
+
+			<div class="gallery">
+			  <a target="_blank" >
+			    <img src="img/Clientes-6.jpg" alt="Nuestros clientes" width="600" height="400">
+			  </a>
+			  <div class="desc"></div>
+			</div>
+
+			<div class="gallery">
+			  <a target="_blank" >
+			    <img src="img/Clientes-7.jpg" alt="Nuestros clientes" width="600" height="400">
 			  </a>
 			  <div class="desc"></div>
 			</div><!-- End row -->
